WexGit/Wex_DX/force-app/main/default/objects/Deleted_Records_Stage__c/Deleted_Records_Stage__c.object-meta.xml
<CustomObject>
    <description>Staging table to store deleted records for i2i</description>
    <label>Deleted Records Stage</label>
    <nameField>
        <displayFormat>DR-{00000}</displayFormat>
        <label>Deleted Records Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>