WexGit/Wex_DX/force-app/main/default/objects/Deleted_Records_Stage__c/fields/Date_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Date_Deleted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Deleted</label>
    <type>DateTime</type>
</CustomField>