WexGit/Wex_DX/force-app/main/default/objects/Deleted_Records_Stage__c/fields/Delete_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Delete_Initiated_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delete Initiated By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>