WexGit/Wex_DX/force-app/main/default/objects/Deleted_Records_Stage__c/fields/Delete_Source__c.field-meta.xml
<CustomField>
    <fullName>Delete_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stamped by the trigger when the record is deleted</inlineHelpText>
    <label>Delete Source</label>
    <type>TextArea</type>
</CustomField>