WexGit/Wex_DX/force-app/main/default/objects/Deleted_Records_Stage__c/fields/Purge__c.field-meta.xml
<CustomField>
    <fullName>Purge__c</fullName>
    <description>If the record was created longer than 7 days ago it will be purged by the Generic Delete Batch.</description>
    <formula>if( CreatedDate &lt; Now() - 7, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the record was created longer than 7 days ago it will be purged by the Generic Delete Batch.</inlineHelpText>
    <label>Purge?</label>
    <type>Checkbox</type>
</CustomField>