WexGit/Wex_DX/force-app/main/default/objects/Deleted_Records_Stage__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>