WexGit/Wex_DX/force-app/main/default/objects/Deleted_Records_Stage__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>